@@ -39,6 +39,7 @@ Features added
 * #8070: html search: Support searching for 2characters word
 * #7830: Add debug logs for change detection of sources and templates
 * #8201: Emit a warning if toctree contains duplicated entries
+* #5603: autodoc: Generate aliases of objects defined in multiple modules
 
 Bugs fixed
 ----------
